Erasing bevel object for curve will not update immediately #60839

Closed
opened 2019-01-24 23:07:40 +01:00 by No One · 6 comments

version: 2.80 (sub 41), branch: master, commit date: 2019-01-24 01:12, hash: 1d908bffdd, type: Release

add bezier
add bezier circle
set circle as bevel object for bezier
erase circle --> bevel on bezier will still be shown
select bezier, go to edit mode, leave edit mode --> bevel now will be gone

version: 2.80 (sub 41), branch: master, commit date: 2019-01-24 01:12, hash: 1d908bffddb4, type: Release add bezier add bezier circle set circle as bevel object for bezier erase circle --> bevel on bezier will still be shown select bezier, go to edit mode, leave edit mode --> bevel now will be gone
Author

Added subscriber: @noone

Added subscriber: @noone

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Sergey Sharybin was assigned by William Reynish 2019-01-25 00:32:16 +01:00

Probably just a missing depsgraph update?

Probably just a missing depsgraph update?

@noone, please always attach .blend file which demonstrates the issue, even if the steps seems small. Saves a lot of time when looking into the reports.

@noone, please always attach .blend file which demonstrates the issue, even if the steps seems small. Saves a lot of time when looking into the reports.

This issue was referenced by bfa8fcc542

This issue was referenced by bfa8fcc542bffe68249e733dd48d23445733f931

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60839
No description provided.