Fix T60839: Deleting bevel object for curve will not update

Was missing conversion of ID_RECALC_GEOEMTRY to curve's operation.